--- a/styles/mainStyle.css
+++ b/styles/mainStyle.css
@@ -254,13 +254,17 @@ body {
     font-family: 'PT Sans';
     font-style: normal;
     font-weight: 400;
-    src: url('../fonts/pt-sans-v17-latin-regular.eot');
+    src: url('./../assets/fonts/pt-sans-v17-latin-700.eot');
     /* IE9 Compat Modes */
-    src: local(''), url('../fonts/pt-sans-v17-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-    url('../fonts/pt-sans-v17-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
-    url('../fonts/pt-sans-v17-latin-regular.woff') format('woff'), /* Modern Browsers */
-    url('../fonts/pt-sans-v17-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
-    url('../fonts/pt-sans-v17-latin-regular.svg#PTSans') format('svg');
+    src: local(''), url('./../assets/fonts/pt-sans-v17-latin-regular.eot?#iefix') format('embedded-opentype'),
+        /* IE6-IE8 */
+        url('./../assets/fonts/pt-sans-v17-latin-regular.woff2') format('woff2'),
+        /* Super Modern Browsers */
+        url('./../assets/fonts/pt-sans-v17-latin-regular.woff') format('woff'),
+        /* Modern Browsers */
+        url('./../assets/fonts/pt-sans-v17-latin-regular.ttf') format('truetype'),
+        /* Safari, Android, iOS */
+        url('./../assets/fonts/pt-sans-v17-latin-regular.svg#PTSans') format('svg');
     /* Legacy iOS */
 }
 
@@ -271,13 +275,17 @@ body {
     font-family: 'PT Sans';
     font-style: italic;
     font-weight: 400;
-    src: url('../fonts/pt-sans-v17-latin-italic.eot');
+    src: url('./../assets/fonts/pt-sans-v17-latin-italic.eot');
     /* IE9 Compat Modes */
-    src: local(''), url('../fonts/pt-sans-v17-latin-italic.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-    url('../fonts/pt-sans-v17-latin-italic.woff2') format('woff2'), /* Super Modern Browsers */
-    url('../fonts/pt-sans-v17-latin-italic.woff') format('woff'), /* Modern Browsers */
-    url('../fonts/pt-sans-v17-latin-italic.ttf') format('truetype'), /* Safari, Android, iOS */
-    url('../fonts/pt-sans-v17-latin-italic.svg#PTSans') format('svg');
+    src: local(''), url('./../assets/fonts/pt-sans-v17-latin-italic.eot?#iefix') format('embedded-opentype'),
+        /* IE6-IE8 */
+        url('./../assets/fonts/pt-sans-v17-latin-italic.woff2') format('woff2'),
+        /* Super Modern Browsers */
+        url('./../assets/fonts/pt-sans-v17-latin-italic.woff') format('woff'),
+        /* Modern Browsers */
+        url('./../assets/fonts/pt-sans-v17-latin-italic.ttf') format('truetype'),
+        /* Safari, Android, iOS */
+        url('./../assets/fonts/pt-sans-v17-latin-italic.svg#PTSans') format('svg');
     /* Legacy iOS */
 }
 
@@ -288,13 +296,17 @@ body {
     font-family: 'PT Sans';
     font-style: normal;
     font-weight: 700;
-    src: url('../fonts/pt-sans-v17-latin-700.eot');
+    src: url('./../assets/fonts/pt-sans-v17-latin-700.eot');
     /* IE9 Compat Modes */
-    src: local(''), url('../fonts/pt-sans-v17-latin-700.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-    url('../fonts/pt-sans-v17-latin-700.woff2') format('woff2'), /* Super Modern Browsers */
-    url('../fonts/pt-sans-v17-latin-700.woff') format('woff'), /* Modern Browsers */
-    url('../fonts/pt-sans-v17-latin-700.ttf') format('truetype'), /* Safari, Android, iOS */
-    url('../fonts/pt-sans-v17-latin-700.svg#PTSans') format('svg');
+    src: local(''), url('./../assets/fonts/pt-sans-v17-latin-700.eot?#iefix') format('embedded-opentype'),
+        /* IE6-IE8 */
+        url('./../assets/fonts/pt-sans-v17-latin-700.woff2') format('woff2'),
+        /* Super Modern Browsers */
+        url('./../assets/fonts/pt-sans-v17-latin-700.woff') format('woff'),
+        /* Modern Browsers */
+        url('./../assets/fonts/pt-sans-v17-latin-700.ttf') format('truetype'),
+        /* Safari, Android, iOS */
+        url('./../assets/fonts/pt-sans-v17-latin-700.svg#PTSans') format('svg');
     /* Legacy iOS */
 }
 
@@ -305,12 +317,16 @@ body {
     font-family: 'PT Sans';
     font-style: italic;
     font-weight: 700;
-    src: url('../fonts/pt-sans-v17-latin-700italic.eot');
+    src: url('./../assets/fonts/pt-sans-v17-latin-700italic.eot');
     /* IE9 Compat Modes */
-    src: local(''), url('../fonts/pt-sans-v17-latin-700italic.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-    url('../fonts/pt-sans-v17-latin-700italic.woff2') format('woff2'), /* Super Modern Browsers */
-    url('../fonts/pt-sans-v17-latin-700italic.woff') format('woff'), /* Modern Browsers */
-    url('../fonts/pt-sans-v17-latin-700italic.ttf') format('truetype'), /* Safari, Android, iOS */
-    url('../fonts/pt-sans-v17-latin-700italic.svg#PTSans') format('svg');
+    src: local(''), url('./../assets/fonts/pt-sans-v17-latin-700italic.eot?#iefix') format('embedded-opentype'),
+        /* IE6-IE8 */
+        url('./../assets/fonts/pt-sans-v17-latin-700italic.woff2') format('woff2'),
+        /* Super Modern Browsers */
+        url('./../assets/fonts/pt-sans-v17-latin-700italic.woff') format('woff'),
+        /* Modern Browsers */
+        url('./../assets/fonts/pt-sans-v17-latin-700italic.ttf') format('truetype'),
+        /* Safari, Android, iOS */
+        url('./../assets/fonts/pt-sans-v17-latin-700italic.svg#PTSans') format('svg');
     /* Legacy iOS */
 }
